--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
-  "name": "My PWA",
+  "name": "Calk",
   "icons": [
     {
-      "src": "icons/512.png",
+      "src": "icon.png",
       "type": "image/png",
       "sizes": "512x512"
     }
